objects/Environment_Information__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is populated on Refresh with the Apex Class ACVSandboxRefreshScript. It holds the values that are avaiable from the SandboxRefresh context.</description>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <description>This holds the Id of the Organization</description>
        <label>Organization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Id__c</fullName>
        <description>This holds the Id of the Sandbox</description>
        <label>Sandbox Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <description>This holds the name of the Sandbox</description>
        <label>Sandbox Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Environment Information</label>
</CustomObject>